fix: anchor timer-bar to visual viewport bottom on iOS (keyboard awareness)

--- a/workout_tracker/static/css/style.css
+++ b/workout_tracker/static/css/style.css
@@ -582,6 +582,8 @@ select.form-control {
     justify-content: space-between;
     align-items: center;
     z-index: 99;
+    transform: translateZ(0);
+    will-change: bottom;
 }
 
 .timer-bar .time {
